Changes for Sandbox 2.3.1
-------------------------

Changes:

* Updated how mobile icons are handled.

Changes for Sandbox 2.3
-----------------------

Changes:

* Added site_tagline setting to go with a site's name in the header.
* Made the iTouch icons used on Empire of the Iguanadons into a standard feature.
* Analytics tracker code updated.

Bugs:

* Social media button links for gallery images needed to be updated.
* Clean up the upgrade installer to handle upgrades for sites running Sandbox 1.8.
* Numerous bug fixes for new installs, upgrades, and minor security issues with hidden image and download folders.

Changes for Sandbox 2.2
-----------------------

Changes:

* Added Google +1 button support to blog posts.
* Added Twitter button support to blog posts.
* Added Reddit button support for blog posts.
* Changed the Facebook button setup.
* Removed the Technorati button as they're now a vile web spam service provider.
* Added global and per-post toggles for restriction of anonymous posting.
* Emoticons are now handled independently of skins and can be added on the fly as desired.
* Added the ability to disable all comments for all users, registered or otherwise.
* Updated the Akismet PHP class to version 0.5.
* Changed all usage of serialize and unserialize to json_encode and json_decode to address potential PHP related vulnerabilities.
* Moved the [c] and [tm] codes into the bbcode parser instead of sitting out on their own.
* Added the ability to reset the download counter on an uploaded file.
* Blog ping functions now require the php5-xmlrpc extension.
* BBCode parsing updated to eliminate PHP5 deprecation warnings for the /e parameter in preg_replace.

Bugs:

* Active users display in the ACP was not showing user names as intended.
* Gallery folder creation was using GET instead of POST.
* Gallery and download folders had naming collisions due to not including the folder ID number in URLs.
* Could not use multiple spoiler tags in a post.