@@ -414,13 +414,13 @@ textarea {
 
 /* Active User Agents */
 #main .article span.ip {
-	width: 10%;
+	width: 22%;
 	margin: 0px 0px 2px;
 	float: left;
 }
 #main .article span.agent {
 	text-align: left;
-	width: 55%;
+	width: 43%;
 	padding: 2px 0px;
 	float: left;
 }
